# Algorithm

./: knowledge_summary.markdown  readme
DesignPattern/: .top_cpp.mk.swp  Makefile  top_cpp.mk
DesignPattern/ObservePattern/: Makefile  main.cpp  observe.cpp  observe.h
DesignPattern/StatePattern/: Makefile  concretestatea.cpp  concretestatea.h  concretestateb.cpp  concretestateb.h  context.cpp  context.h  main.cpp  state.cpp  state.h
Hearts/: CMakeLists.txt  build.sh
Hearts/game/: CMakeLists.txt  com.c  poker.c  poker.h
Hearts/ut/: main.c
boost/intrusive_ptr/: intrusive_ptr_base.hpp  main.cpp
boost/shared_ptr/: scoped_ptr shared_ptr weak_ptr.html
c++11/: main.cpp
cxx/avltree/: main.cxx  readme
cxx/vtable/: main.cxx
erl/demServer/: serv1.erl
java/: Fibonacci.java  collection.java  dedup.java  findGreatestSumOfSubArray.java  getLeastNumbers.java  readme  rebuild_binary_tree.java
knowledge/db/: db_temporary_table.docx  postgres_schema.docx  postgres_slony.docx  sql_select_performance.txt
knowledge/design/: c++_virtual_inherit.docx  design_dependency_injection.docx
knowledge/erlang/: erl_remote_node_manage.txt
knowledge/hadoop/: hadoop_deployment_simple_node.txt
knowledge/http-server-dev/: apache_customer_modulde_dev.docx  apache_input_output_filter.docx  nginx_module_advanced.docx  nginx_reverse_proxy_config.docx  nginx_self_module_demo.docx
knowledge/kernel_fs/: VFS.docx
knowledge/network/: netmask.txt  nfs_access_deny.docx  subneting_1.txt
knowledge/redis/: redis-knowledges-step  redis-persistence.odt  redis-slave-master.odt
knowledge/rpm/: rpm_basic_use.docx  rpm_manual_part1.docx  rpm_manual_part2.docx
knowledge/svn/: svn_backup.docx
knowledge/tcp/: tcp_mtu_mss.docx  (+3 more)
mak/: Makefile
python/: eratosthenes_prime.py
sort/: Makefile  heapmemalloc.cpp  heapmemalloc.h  heapsort.h  main.cpp  memallocator.h  quicksort.h  sort.h
threadpool/: Condition.h  Makefile  Thread.cc  Thread.h  ThreadPool  ThreadPool.h  main.cc
(+194 files in other folders)
